# pg_slot_bot

./: Cargo.toml  Dockerfile  README.md  t.md
assets/: index.html
src/: main.rs
